--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
+    "axios": "^1.2.2",
     "expo": "~46.0.13",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "nodemon": "^2.0.20",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
